HOTFIX: fix section spacing

--- a/wp-content/themes/quarkexpeditions/src/front-end/global/custom-properties.scss
+++ b/wp-content/themes/quarkexpeditions/src/front-end/global/custom-properties.scss
@@ -102,7 +102,7 @@
 	@media screen and (min-width: grid-size(lg)) {
 		--grid-row-gutter: var(--spacing-5);
 		--grid-col-gutter: var(--spacing-5);
-		--grid-section-gutter: var(--spacing-9);
+		--grid-section-gutter: var(--spacing-8);
 	}
 
 	/**
